--- a/src/scss/pages/home/_home.scss
+++ b/src/scss/pages/home/_home.scss
@@ -196,3 +196,96 @@
     color: $orange-color;
   }
 }
+#wrapper{
+  @include _main($back-color:#f7f7f7 , $margin:90px 0 , $padding:110px 0);
+
+  .wrapper_img{
+position: relative;
+width: 100%;
+height: 355px;
+overflow: hidden;
+&:hover{
+  img{
+    transform: scale(1.05);
+  }
+}
+img{
+  transition: .5s ease-in-out;
+  width: 100%;
+  height: 355px;
+  object-fit: cover;
+  object-position: center;
+}
+.play_btn{
+  position: absolute;
+  top: 40%;
+  left: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: $white-color;
+  border-radius: 50%;
+  width: 20%;
+  height: 22%;
+  i{
+    font-size: 40px;
+    color: $orange-bgcolor;
+  }
+}
+       
+
+    
+}
+      .right_side{
+          padding: 17px 0;
+          margin-left: 57px;
+          .header{
+              font-style: italic;
+              @include _main( $width:60% ,  $color:black , $text-align:inherit , $font_s:41px , );
+         gap: 15px;
+  
+              h3{
+                 @include _main($display:inline ,  $text-align:inherit , $font_s:28px , $margin:0px);
+      font-weight: 400;      
+              }
+      #flowers{
+          @include _main($color:red , $text-align:inherit , $font_s:28px);
+          font-weight: 400;    
+        }  
+          }
+          #text_p{
+              color: #acacac;
+              margin: 28px 0;
+          }
+          ul{
+              @include _main($display:flex , $color: #acacac , $margin:0px , $padding:0px) ;
+              flex-direction: column;
+              gap: 15px;
+              list-style-type: none;
+              li{
+                  @include _main($display:flex ,  ) ;
+                  gap: 10px;
+                  flex-direction: row;
+                  list-style: none;
+                  img{
+                      object-fit: contain;
+                  }
+          }
+      }
+  }
+}
+
+#video_modal{
+  .modal-dialog{
+    .modal-body{
+      height: 300px;
+      width: 500px;
+      padding: 0px;
+      iframe{
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+  
+}
