--- a/src/scss/pages/home/_home.scss
+++ b/src/scss/pages/home/_home.scss
@@ -274,7 +274,6 @@ img{
       }
   }
 }
-
 #video_modal{
   .modal-dialog{
     .modal-body{
@@ -288,4 +287,186 @@ img{
     }
   }
   
+}
+#expert{
+  margin: 100px 0;
+ 
+     h3{
+      font-family: $font-Playfair;
+      color: $black-txtcolor;
+      font-size: 35px;
+     }
+     #text_p{
+      font-family: $font-Lora;
+      width: 46%;
+      margin: 20px auto 35px auto;
+      font-size: 16px;
+      color: $lightgray-txtcolor;
+     }
+     .cart{
+      @include _main( $display:flex , $just_content:center , $align_it:center);
+      margin: 25px 0;
+      flex-direction: column;
+      .cart_img{
+          @include _main($margin:0 0 22px 0 ,$width:222px , $height:222px);
+          img{
+              @include _main($width:100% , $height:100% , $object_f:contain);
+          }
+      }
+      span{
+          font-size: 14px;
+          color: $black-txtcolor;
+          font-family: $font-Mont;
+      }
+      p{
+        font-family: $font-Mont;
+          font-size: 13px;
+          margin: 10px 0 ;
+          color: $lightgray-txtcolor;
+      }
+     }
+}
+#fixed_search{
+  margin-top: 100px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: $font-Playfair;
+  padding: 185px 0;
+  background-attachment: fixed;
+  .search_div{
+          h3{
+   font-size: 30px;
+   color: $white-color;
+  }
+form{
+  margin-top: 29px;
+  display: flex;
+ align-items: center;
+ justify-content: center;
+
+  input{
+      outline: none;
+      border: 1px solid transparent;
+      background-color: $white-color;
+      font-size: 14px;
+      padding: 22px;
+      width: 37%;
+      &::placeholder{
+        font-size: 12px;
+        color: $lightgray-txtcolor;
+      }
+  }
+  button{
+      font-size: 14px;
+      width: 13%;
+      padding: 22px;
+      outline: none;
+      border: 1px solid transparent;
+      color: white;
+      background-color: $orange-bgcolor;
+  }
+}
+}
+}
+#blog_cards{
+  @include _main($back-color:$gray-bgcolor ,  $padding:100px 0);
+  font-family: $font-Playfair;
+  .header{
+      h3{
+          font-size: 35px;
+         }
+         #text_p{
+          width: 46%;
+          margin: 25px auto 55px auto;
+          font-size: 16px;
+          color: $lightgray-txtcolor;
+         }
+  }
+  .cart_blog{
+      @include _main($display:flex , $align_it:center , $just_content:center);
+      flex-direction: column;
+      .cart_img{
+          @include _main($cursor:pointer ,$width:100% , $height:268px , $position:relative );
+          overflow: hidden;
+          transform: scale(1);
+          img{
+              transition: .2s ease-in-out;
+              @include _main($width:100% , $height:268px , $object_f:contain );
+          }
+          .time_box{
+              transition: .3s ease-in-out;
+              @include _main($position:absolute , $back-color:$white-color , $color:$black-color , $font_s:15px , $padding:9px 19px , $top:30px , $cursor:pointer , $left:10px);
+              &:hover{
+                  color: $orange-color;
+              }
+          }
+          &:hover img{
+              transform: scale(1.04);
+          }
+      }
+      h3{
+          font-size: 23px;
+          margin: 32px 0 15px 0;
+          font-weight: 300;
+         }
+         p{
+          font-size: 14px;
+          color: $lightgray-txtcolor;
+          text-align: center;
+         }
+  }
+}
+#blog_swiper{
+  margin-top: 130px;
+.swiper-button-prev{
+  top: 100px !important;
+  left: 190px !important;
+  .bi{
+      font-size: 36px;
+      color: $lightgray-txtcolor;
+  }
+  &::after{
+      content: "";
+  }
+}
+.swiper-button-next{
+  top: 100px !important;
+  right: 190px !important;
+  .bi{
+      font-size: 36px;
+      color: $lightgray-txtcolor;
+  }
+  &::after{
+      content: "";
+  }
+}
+  .cart_swiper{
+      max-width: 600px;
+      flex-direction: column;
+      @include _main($margin:0 auto , $text-align:center , $display:flex ,$align_it:center , $just_content:center );
+   img{
+      @include _main($width:87px , $height:87px , $object_f:contain);
+   }
+   p{
+      font-size: 21px;
+      font-style: italic;
+      color: $gray-txtcolor;
+      font-family: $font-Lora;
+      margin: 15px 0 30px 0;
+      line-height: 1.5em;
+   }
+   span{
+    font-size: 12px;
+    line-height: 2em;
+    font-weight: 500;
+    color: $black-color;
+      margin: 0px 0 10px 0;
+      font-family: $font-Mont;
+   }
+   #florist{
+      color: $lightgray-txtcolor;
+
+   }
+  }
 }
