--- a/src/scss/pages/home/_home.scss
+++ b/src/scss/pages/home/_home.scss
@@ -177,10 +177,69 @@
   .show {
     display: block;
   }
+  #myBtnContainer{
+   
+    .btn {
+      border: none;
+      outline: none;
+      padding: 12px 16px;
+      background-color: white;
+      cursor: pointer;
+      text-transform: uppercase;
+      font-family: $font-Mont;
+      font-size: 12px;
+      @media (max-width:1024px) {
+        padding: 10px 10px;
+      }
+    }
+    .btn:hover {
+      color: $orange-color;
+    }
+    @media (max-width:768px) {
+      display: none;
+    }
+  }
+  
+  .btncontainer{
+
+  display: none;
+  @media (max-width:768px) {
+    display: block;
+  }
+    a{
+      text-decoration: none;
+      color: $black-color;
+      font-family: $font-Mont;
+      font-size: 12px;
+      line-height: 2em;
+      font-weight: 500;
+      letter-spacing: .1em;
+      text-transform: uppercase;
+    
+    }
+    &:hover{
+      .btn_hover{
+        height: auto;
+        opacity: 1;
+      }
+    }
+   .btn_hover{
+    transition: .5s ease-in-out;
+    background-color: $white-color;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+ text-align: start;
+  padding: 20px;
+justify-content: start;
+align-items: flex-start;
+height: 0;
+overflow: hidden;
+opacity: 0;
   .btn {
     border: none;
     outline: none;
-    padding: 12px 16px;
+    padding: 5px 0px;
     background-color: white;
     cursor: pointer;
     text-transform: uppercase;
@@ -190,7 +249,54 @@
   .btn:hover {
     color: $orange-color;
   }
+  }
+}
+.filter_btn{
+  position: relative;
+  a{
+    text-decoration: none;
+    color: $black-color;
+    font-family: $font-Mont;
+    font-size: 12px;
+    line-height: 2em;
+    font-weight: 500;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+  
+  }
+  &:hover{
+    .filter_btn_hover{
+      display: flex;
+    }
+  }
+ .filter_btn_hover{
+  background-color: $white-color;
+  display: none;
+  width: 488px;
+position: absolute;
+padding: 20px;
+// top: -200%;
+left: -150px;
+ul{
+  #list_header{
+    font-size:22px ;
+   color: $black-color;
+    margin: 20px 0;
+  }
+  li{
+    cursor: pointer;
+    list-style: none;
+    font-size: 13px;
+    text-transform: capitalize;
+    font-weight: 500;
+    font-family: $font-Playfair;
+    color: $gray-txtcolor;
+    margin: 10px 0;
+  }
+}
+ }
 
+}
   /* Add a dark background color to the active button */
    .active {
     color: $orange-color;
