--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -6,6 +6,75 @@
   padding: 0;
 }
 
+footer {
+  margin-top: 100px;
+  background-color: #fefaf3;
+}
+footer .footer_lists {
+  padding: 90px 0;
+}
+footer .footer_lists h6 {
+  font-size: 12px;
+  color: #000000;
+  font-family: "Montserrat", sans-serif;
+  margin-bottom: 20px;
+}
+footer .footer_lists ul {
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  flex-direction: column;
+}
+footer .footer_lists ul li {
+  list-style: none;
+  line-height: 30px;
+}
+footer .footer_lists ul li a {
+  font-size: 12px;
+  color: #8B8B8B;
+  font-family: "Montserrat", sans-serif;
+  text-decoration: none;
+  transition: 0.3s ease-in-out;
+}
+footer .footer_lists ul li a:hover {
+  color: rgb(255, 40, 40);
+}
+footer .footer_foot .foot_border {
+  padding: 20px 0;
+  font-size: 13px;
+  color: #8B8B8B;
+  border-top: 1px solid #eceae1;
+}
+footer .footer_foot .foot_border a {
+  font-size: 14px;
+  color: #6D6a6A;
+  text-decoration: none;
+  transition: 0.3s ease-in-out;
+}
+footer .footer_foot .foot_border a:hover {
+  color: #FF0000;
+}
+footer .footer_foot .foot_border img {
+  cursor: pointer;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+footer .footer_foot .foot_border .sites {
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
+}
+footer .footer_foot .foot_border .sites a {
+  font-family: "Montserrat", sans-serif;
+  font-size: 10px;
+  color: #8B8B8B;
+}
+footer .footer_foot .foot_border .sites a:hover {
+  color: #FF0000;
+}
+
 #nav1 {
   transition: 0.5s ease-in-out;
   z-index: 10;
