--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1349,4 +1349,53 @@ footer .footer_foot .foot_border .sites a:hover {
 }
 #blog_swiper .cart_swiper #florist {
   color: #AFAFAF;
+}
+
+#back_to_top button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  position: fixed;
+  width: 40px;
+  height: 40px;
+  bottom: 20px;
+  right: 20px;
+  z-index: 99;
+  font-size: 18px;
+  text-align: center;
+  border: none;
+  outline: none;
+  background-color: #F34F3F;
+  color: #fff;
+  cursor: pointer;
+  padding: 15px;
+  box-shadow: 0px 0px 10px 0px gray;
+}
+
+#toolbar {
+  position: fixed;
+  bottom: 150px;
+  right: 0px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  z-index: 9999;
+}
+#toolbar .icon {
+  width: 42px;
+  height: 42px;
+  background-color: #ef2853;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#toolbar .buy_now {
+  width: 42px;
+  height: 42px;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ef2853;
 }/*# sourceMappingURL=style.css.map */
