--- a/src/scss/pages/extra/_extra.scss
+++ b/src/scss/pages/extra/_extra.scss
@@ -24,7 +24,7 @@
     }
 #toolbar{
   position: fixed;
-    bottom: 150px;
+    bottom: 15%;
     right: 0px;
   display: flex;
   flex-direction: column;
