--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -66,6 +66,11 @@ footer .footer_foot .foot_border .sites {
   justify-content: flex-end;
   gap: 20px;
 }
+@media (max-width: 768px) {
+  footer .footer_foot .foot_border .sites {
+    justify-content: center;
+  }
+}
 footer .footer_foot .foot_border .sites a {
   font-family: "Montserrat", sans-serif;
   font-size: 10px;
@@ -111,7 +116,7 @@ header #nav1 .navbar ul {
   display: flex;
   align-items: center;
   flex-direction: row;
-  gap: 25px;
+  gap: 20px;
   list-style-type: none;
 }
 header #nav1 .navbar ul li {
@@ -629,7 +634,7 @@ header #nav1 .navbar #cart_add {
   cursor: pointer;
   display: flex;
   align-items: center;
-  gap: 13px;
+  gap: 10px;
   font-weight: 500;
   position: relative;
 }
@@ -809,6 +814,7 @@ header .navbaractive {
   padding: 30px 0;
 }
 #swiper_bundle .left_side {
+  width: 100%;
   position: relative;
   z-index: 1;
   text-align: start;
@@ -818,7 +824,6 @@ header .navbaractive {
   width: 65%;
   color: #000000;
   text-align: inherit;
-  font-size: 41px;
 }
 #swiper_bundle .left_side .header h3 {
   font-weight: 400;
@@ -828,11 +833,15 @@ header .navbaractive {
   text-align: inherit;
   font-size: 41px;
 }
+@media (max-width: 1024px) {
+  #swiper_bundle .left_side .header h3 {
+    font-size: 31px;
+  }
+}
 #swiper_bundle .left_side .header #flowers {
   font-weight: 400;
   color: #FF0000;
   text-align: inherit;
-  font-size: 41px;
 }
 #swiper_bundle .left_side #title {
   width: 80%;
@@ -925,7 +934,6 @@ header .navbaractive {
 }
 
 #filter {
-  /* Create three equal columns that floats next to each other */
   /* Add a dark background color to the active button */
 }
 #filter .column {
@@ -1040,7 +1048,6 @@ header .navbaractive {
   flex-direction: column;
   width: 100%;
   text-align: start;
-  padding: 20px;
   justify-content: start;
   align-items: flex-start;
   height: 0;
@@ -1063,11 +1070,16 @@ header .navbaractive {
 #filter .filter_btn {
   position: relative;
 }
+@media (max-width: 580px) {
+  #filter .filter_btn {
+    text-align: left !important;
+  }
+}
 #filter .filter_btn a {
   text-decoration: none;
   color: #000000;
   font-family: "Montserrat", sans-serif;
-  font-size: 12px;
+  font-size: 11px;
   line-height: 2em;
   font-weight: 500;
   letter-spacing: 0.1em;
@@ -1083,6 +1095,16 @@ header .navbaractive {
   position: absolute;
   padding: 20px;
   left: -150px;
+}
+@media (max-width: 1024px) {
+  #filter .filter_btn .filter_btn_hover {
+    left: -200px;
+  }
+}
+@media (max-width: 580px) {
+  #filter .filter_btn .filter_btn_hover {
+    left: 0px;
+  }
 }
 #filter .filter_btn .filter_btn_hover ul #list_header {
   font-size: 22px;
@@ -1142,11 +1164,11 @@ header .navbaractive {
   font-size: 40px;
   color: #F34F3F;
 }
-#wrapper .right_side {
+#wrapper .wrapper_texts {
   padding: 17px 0;
   margin-left: 57px;
 }
-#wrapper .right_side .header {
+#wrapper .wrapper_texts .header {
   font-style: italic;
   width: 60%;
   color: black;
@@ -1154,24 +1176,29 @@ header .navbaractive {
   font-size: 41px;
   gap: 15px;
 }
-#wrapper .right_side .header h3 {
+#wrapper .wrapper_texts .header h3 {
   margin: 0px;
   text-align: inherit;
-  font-size: 28px;
+  font-size: 30px;
   display: inline;
   font-weight: 400;
 }
-#wrapper .right_side .header #flowers {
+@media (max-width: 1024px) {
+  #wrapper .wrapper_texts .header h3 {
+    font-size: 25px;
+  }
+}
+#wrapper .wrapper_texts .header #flowers {
   color: red;
   text-align: inherit;
   font-size: 28px;
   font-weight: 400;
 }
-#wrapper .right_side #text_p {
+#wrapper .wrapper_texts p {
   color: #acacac;
   margin: 28px 0;
 }
-#wrapper .right_side ul {
+#wrapper .wrapper_texts ul {
   margin: 0px;
   padding: 0px;
   color: #acacac;
@@ -1180,13 +1207,13 @@ header .navbaractive {
   gap: 15px;
   list-style-type: none;
 }
-#wrapper .right_side ul li {
+#wrapper .wrapper_texts ul li {
   display: flex;
   gap: 10px;
   flex-direction: row;
   list-style: none;
 }
-#wrapper .right_side ul li img {
+#wrapper .wrapper_texts ul li img {
   -o-object-fit: contain;
      object-fit: contain;
 }
@@ -1294,6 +1321,16 @@ header .navbaractive {
   color: white;
   background-color: #F34F3F;
 }
+@media (max-width: 1024px) {
+  #fixed_search .search_div form button {
+    width: 15%;
+  }
+}
+@media (max-width: 768px) {
+  #fixed_search .search_div form button {
+    width: 25%;
+  }
+}
 
 #blog_cards {
   padding: 100px 0;
@@ -1327,8 +1364,8 @@ header .navbaractive {
   transition: 0.2s ease-in-out;
   width: 100%;
   height: 268px;
-  -o-object-fit: contain;
-     object-fit: contain;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 #blog_cards .cart_blog .cart_img .time_box {
   transition: 0.3s ease-in-out;
@@ -1365,6 +1402,12 @@ header .navbaractive {
   top: 100px !important;
   left: 190px !important;
 }
+@media (max-width: 768px) {
+  #blog_swiper .swiper-button-prev {
+    top: 90px !important;
+    left: 10px !important;
+  }
+}
 #blog_swiper .swiper-button-prev .bi {
   font-size: 36px;
   color: #AFAFAF;
@@ -1375,6 +1418,12 @@ header .navbaractive {
 #blog_swiper .swiper-button-next {
   top: 100px !important;
   right: 190px !important;
+}
+@media (max-width: 768px) {
+  #blog_swiper .swiper-button-next {
+    top: 90px !important;
+    right: 10px !important;
+  }
 }
 #blog_swiper .swiper-button-next .bi {
   font-size: 36px;
