--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -76,10 +76,7 @@ header{
             #home{
                 position: relative; 
                 a{
-                    &::before{
-                    @include _main($position:absolute , $top:70px , $left:0px , $back-color:black , $width:100% , $height:1px);
-                    content: '';
-                    }   
+                  
                 }
                 #list_hover{
                     overflow: hidden;
@@ -344,6 +341,12 @@ header{
                 opacity: 1;
                 @include _main($height:178px , $back-color:white);
             }
+        }
+        #navbtnactive{
+            &::before{
+                @include _main($position:absolute , $top:65px , $left:0px , $back-color:$black-color , $width:100% , $height:1px);
+                content: '';
+                } 
         }
         }    
         #cart_add{
