--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,4 +16,5 @@
 @import 'layout/nav';
 @import 'pages/home/home';
 @import 'pages/contact/contact';
+@import 'pages/productslist/productlist';
 @import 'pages/extra/extra';
